Added support for Bela
Co-authored-by: elgiano <elgiano@gmail.com>
Co-authored-by: sensestage <nescivi@gmail.com>
Co-authored-by: Dan Stowell <danstowell@users.sourceforge.net>
Co-authored-by: Andrew McPherson <a.mcpherson@qmul.ac.uk>
Co-authored-by: brianlheim <self@brianlheim.com>

--- a/lang/CMakeLists.txt
+++ b/lang/CMakeLists.txt
@@ -116,7 +116,7 @@ if(AUDIOAPI STREQUAL "default")
     endif(APPLE)
 endif()
 
-if(NOT AUDIOAPI MATCHES "^(jack|coreaudio|portaudio)$")
+if(NOT AUDIOAPI MATCHES "^(jack|coreaudio|portaudio|bela)$")
     message(FATAL_ERROR "Unrecognised audio API: ${AUDIOAPI}")
 endif()
 
@@ -132,6 +132,8 @@ elseif (AUDIOAPI STREQUAL portaudio)
     add_definitions("-DSC_AUDIO_API_PORTAUDIO")
     list(APPEND sclang_sources ${CMAKE_SOURCE_DIR}/common/SC_PaUtils.cpp)
     include_directories(${PORTAUDIO_INCLUDE_DIRS})
+elseif(AUDIOAPI STREQUAL bela)
+    add_definitions("-DSC_AUDIO_API_BELA")
 endif()
 
 if(UNIX)
