CMakeLists.txt: Adding option to build with system Ableton Link.
Adding SYSTEM_ABLETON_LINK (defaults to OFF) option to indicate, that the system version of Ableton Link should be used.

lang/CMakeLists.txt: Calling find_package() for AbletonLink with appropriate NAMES.

Currently downstreams package AbletonLink as ableton-link and link, which places AbletonLinkConfig.cmake in the wrong paths
(e.g. /usr/share/ableton-link and /usr/lib/cmake/link for Debian and Arch respectively).
Therefore find_package() for AbletonLink has to be called with appropriate NAMES, so that both the path *and* the file can be resolved.
Also, setting REQUIRED, so that cmake will fail generically on not finding AbletonLink.

--- a/lang/CMakeLists.txt
+++ b/lang/CMakeLists.txt
@@ -252,7 +252,12 @@ endif()
 
 if (SC_ABLETON_LINK)
 	message(STATUS "Compiling with Ableton Link support")
-	include(../external_libraries/link/AbletonLinkConfig.cmake)
+	if(SYSTEM_ABLETON_LINK)
+		find_package(AbletonLink NAMES AbletonLink ableton-link link REQUIRED)
+	else()
+		include(../external_libraries/link/AbletonLinkConfig.cmake)
+	endif()
+
 	target_link_libraries(libsclang Ableton::Link)
 
 	add_definitions(-DSC_ABLETON_LINK)
