--- a/lang/CMakeLists.txt
+++ b/lang/CMakeLists.txt
@@ -236,7 +236,13 @@ if(SC_HIDAPI)
   endif()
 endif()
 
-target_link_libraries(libsclang boost_thread_lib boost_system_lib boost_regex_lib boost_filesystem_lib)
+target_link_libraries(libsclang
+    boost_thread_lib
+    boost_system_lib
+    boost_regex_lib
+    boost_filesystem_lib
+    boost_program_options_lib
+)
 target_include_directories(libsclang PUBLIC ${boost_include_dirs})
 
 if (SCLANG_SERVER)
