--- a/lang/CMakeLists.txt
+++ b/lang/CMakeLists.txt
@@ -123,7 +123,7 @@ endif()
 if (AUDIOAPI STREQUAL coreaudio)
     add_definitions("-DSC_AUDIO_API_COREAUDIO")
 elseif (AUDIOAPI STREQUAL portaudio)
-    if (NOT BUILD_PORTAUDIO)
+    if (SYSTEM_PORTAUDIO)
         find_package(Portaudio)
         if(NOT PORTAUDIO_FOUND)
             message(FATAL_ERROR "Portaudio selected as audio API, but development files not found")
