--- a/lang/CMakeLists.txt
+++ b/lang/CMakeLists.txt
@@ -123,12 +123,12 @@ endif()
 if (AUDIOAPI STREQUAL coreaudio)
     add_definitions("-DSC_AUDIO_API_COREAUDIO")
 elseif (AUDIOAPI STREQUAL portaudio)
-    if ((NOT WIN32) OR MSYS)
+    if (SYSTEM_PORTAUDIO)
         find_package(Portaudio)
         if(NOT PORTAUDIO_FOUND)
             message(FATAL_ERROR "Portaudio selected as audio API, but development files not found")
-        endif() #NOT PORTAUDIO_FOUND
-    endif() #(NOT WIN32) OR MSYS
+        endif()
+    endif()
     add_definitions("-DSC_AUDIO_API_PORTAUDIO")
     list(APPEND sclang_sources ${CMAKE_SOURCE_DIR}/common/SC_PaUtils.cpp)
     include_directories(${PORTAUDIO_INCLUDE_DIRS})
@@ -296,11 +296,7 @@ if(ALSA_FOUND)
 endif(ALSA_FOUND)
 
 if (AUDIOAPI STREQUAL portaudio)
-    if(WIN32 AND NOT MSYS)
-        target_link_libraries(libsclang portaudio)
-    else()
-        target_link_libraries(libsclang ${PORTAUDIO_LIBRARIES})
-    endif()
+    target_link_libraries(libsclang ${PORTAUDIO_LIBRARIES})
 endif()
 
 if(SNDFILE_FOUND)
