step. add blank SC_WebAudio.cpp ; change 'openal' to 'webaudio'
- we have unstaged commits in `external_libraries/nova-tt`; thus
  next step will be to commit them in a fork of nova-tt

--- a/lang/CMakeLists.txt
+++ b/lang/CMakeLists.txt
@@ -109,13 +109,13 @@ if(AUDIOAPI STREQUAL "default")
     elseif(WIN32)
         set(AUDIOAPI portaudio)
     elseif(EMSCRIPTEN)
-        set(AUDIOAPI openal)
+        set(AUDIOAPI webaudio)
     else()
         set(AUDIOAPI jack)
     endif(APPLE)
 endif()
 
-if(NOT AUDIOAPI MATCHES "^(jack|coreaudio|portaudio|bela|openal)$")
+if(NOT AUDIOAPI MATCHES "^(jack|coreaudio|portaudio|bela|openal|webaudio)$")
     message(FATAL_ERROR "Unrecognised audio API: ${AUDIOAPI}")
 endif()
 
