--- a/lang/CMakeLists.txt
+++ b/lang/CMakeLists.txt
@@ -112,13 +112,13 @@ if(AUDIOAPI STREQUAL "default")
     elseif(WIN32)
         set(AUDIOAPI portaudio)
     elseif(EMSCRIPTEN)
-        set(AUDIOAPI openal)
+        set(AUDIOAPI webaudio)
     else()
         set(AUDIOAPI jack)
     endif(APPLE)
 endif()
 
-if(NOT AUDIOAPI MATCHES "^(jack|coreaudio|portaudio|openal)$")
+if(NOT AUDIOAPI MATCHES "^(jack|coreaudio|portaudio|webaudio)$")
     message(FATAL_ERROR "Unrecognised audio API: ${AUDIOAPI}")
 endif()
 
