CMake: specify libsndfile flags for each target

--- a/lang/CMakeLists.txt
+++ b/lang/CMakeLists.txt
@@ -305,6 +305,15 @@ if (AUDIOAPI STREQUAL portaudio)
 endif()
 
 if(SNDFILE_FOUND)
+	if(SNDFILE_HAS_VORBIS)
+		target_compile_definitions(libsclang PUBLIC SNDFILE_HAS_VORBIS)
+	endif()
+	if(SNDFILE_HAS_OPUS)
+		target_compile_definitions(libsclang PUBLIC SNDFILE_HAS_OPUS)
+	endif()
+	if(SNDFILE_HAS_MPEG)
+		target_compile_definitions(libsclang PUBLIC SNDFILE_HAS_MPEG)
+	endif()
 	target_include_directories(libsclang PUBLIC ${SNDFILE_INCLUDE_DIR})
 	target_link_libraries(libsclang ${SNDFILE_LIBRARIES})
 elseif(NOT NO_LIBSNDFILE)
