--- a/testsuite/lang/CMakeLists.txt
+++ b/testsuite/lang/CMakeLists.txt
@@ -1,5 +1,9 @@
-file(GLOB tests *.scd)
+add_library(lang_boost_test STATIC boost_test.cpp)
+target_include_directories(lang_boost_test PUBLIC ${boost_include_dirs})
 
+add_subdirectory(LangSource)
+
+file(GLOB tests *.scd)
 foreach(test ${tests})
     get_filename_component(test_name ${test} NAME_WE)
     set(test_target ${test_name}_run)
