search for qt5 via homebrew in cmake

--- a/lang/CMakeLists.txt
+++ b/lang/CMakeLists.txt
@@ -180,6 +180,9 @@ if(SC_HIDAPI)
 endif(SC_HIDAPI)
 
 if(SC_QT OR SC_IDE)
+	if(APPLE)
+		include("${CMAKE_SOURCE_DIR}/cmake_modules/FindQt5PrefixApple.cmake")
+	endif()
 	set(QT_COLLIDER_LANG_CLIENT ON)
 	include(../QtCollider/CMakeLists.txt)
 	list(APPEND sclang_sources ${QT_COLLIDER_SRCS})
