--- a/lang/CMakeLists.txt
+++ b/lang/CMakeLists.txt
@@ -164,10 +164,12 @@ endif()
 # This sets up the exe icon for windows.
 if(WIN32)
  set(RES_FILES ${CMAKE_SOURCE_DIR}/platform/windows/Resources/sclang.rc)
+ if(MINGW OR MSYS)
  set(CMAKE_RC_COMPILER_INIT windres)
  ENABLE_LANGUAGE(RC)
  SET(CMAKE_RC_COMPILE_OBJECT
  "<CMAKE_RC_COMPILER> -O coff <DEFINES> -i <SOURCE> -o <OBJECT>")
+ endif(MINGW OR MSYS)
 endif(WIN32)
 
 if(SC_HIDAPI)
